<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shadow_back"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="350dp"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="@dimen/min_margin"
        android:padding="@dimen/regular_margin"
        android:elevation="@dimen/regular_margin"
        android:background="@color/transparent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_alert"
                android:layout_width="match_parent"
                android:layout_height="@dimen/img_size_error"
                android:src="@drawable/baseline_error_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_title"
                />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_general_title"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/regular_text"
                app:layout_constraintTop_toBottomOf="@id/icon_alert"
                app:layout_constraintBottom_toTopOf="@id/tv_code"/>
            <TextView
                android:id="@+id/tv_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/regular_text"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintBottom_toTopOf="@id/btn_ok"
                android:text="@string/error_general_id"/>
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/regular_margin"
                android:layout_marginBottom="@dimen/regular_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="@color/black"
                android:text="@string/btn_understand"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>